# scraping-example

./: README.md  all_pages_scraper.py  basic_scraper.py  pyproject.toml
