[tool.poetry]
name = "scraping-example"
version = "0.1.0"
description = ""
authors = ["AbinavRavi <subramathreya@gmail.com>"]
readme = "README.md"
packages = [{include = "scraping_example"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
